--- a/paginas/projects/projects.html
+++ b/paginas/projects/projects.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Portifolio_InnovaMA/paginas/projects/projects.css">
+    <link rel="stylesheet" href="/paginas/projects/projects.css">
 </head>
 <body>
     <div class="wrapper">
         <header>
         <div class="menu_header">
             <ul class="nav_header">
-                <a href="/Portifolio_InnovaMA/index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
-                <a href="/Portifolio_InnovaMA/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
-                <a href="/Portifolio_InnovaMA/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
+                <a href="index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
+                <a href="/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
+                <a href="/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
             </ul>
         </div>
     </header>
@@ -25,15 +25,15 @@
         </div>
 
         <div class="banner">
-            <a href="https://projeto-next-eight.vercel.app/"><img src="/Portifolio_InnovaMA/img/site1.svg" alt=""></a>
-            <a href="https://project-web-react-five.vercel.app/"><img src="/Portifolio_InnovaMA/img/site2.svg" alt=""></a>
-            <a href="https://curso-aprendizado.vercel.app/"><img src="/Portifolio_InnovaMA/img/site3.svg" alt=""></a>
+            <a href="https://projeto-next-eight.vercel.app/"><img src="/img/site1.svg" alt=""></a>
+            <a href="https://project-web-react-five.vercel.app/"><img src="/img/site2.svg" alt=""></a>
+            <a href="https://curso-aprendizado.vercel.app/"><img src="/img/site3.svg" alt=""></a>
         </div>
     </main>
 
     <footer>
         <div class="logo">
-            <img src="/Portifolio_InnovaMA/img/Logo Alura Include.svg" alt="Alura">
+            <img src="/img/Logo Alura Include.svg" alt="Alura">
             <p>Desenvolvido por Fernando Cantanhede</p>
         </div>
     </footer>
@@ -42,7 +42,7 @@
     
     
   <script src="https://unpkg.com/lucide@latest"></script>
-  <script src="/Portifolio_InnovaMA/paginas/projects/projects.js"></script>
+  <script src="/paginas/projects/projects.js"></script>
 </body>
 </html>
 
