--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Portifolio_InnovaMA/paginas/home/index.css">
+    <link rel="stylesheet" href="/paginas/home/index.css">
 </head>
 <body>
     <div class="wrapper">
         <header>
             <div class="menu_header">
                 <ul class="nav_header">
-                    <a href="/Portifolio_InnovaMA/index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
-                    <a href="/Portifolio_InnovaMA/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
-                    <a href="/Portifolio_InnovaMA/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
+                    <a href="index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
+                    <a href="/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
+                    <a href="/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
                 </ul>
             </div>
         </header>
@@ -33,19 +33,19 @@
             </div>
 
             <div>
-                <img src="/Portifolio_InnovaMA/img/banner.svg" alt="">
+                <img src="/img/banner.svg" alt="">
             </div>
         </main>
 
         <footer>
             <div class="logo">
-                <img src="/Portifolio_InnovaMA/img/Logo Alura Include.svg" alt="Alura">
+                <img src="/img/Logo Alura Include.svg" alt="Alura">
                 <p>Desenvolvido por Fernando Cantanhede</p>
             </div>
         </footer>
     </div>
 
     <script src="https://unpkg.com/lucide@latest"></script>
-    <script src="/Portifolio_InnovaMA/paginas/home/index.js"></script>
+    <script src="/paginas/home/index.js"></script>
 </body>
 </html>
