--- a/paginas/Habilidade/habilidade.html
+++ b/paginas/Habilidade/habilidade.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Portifolio_InnovaMA/paginas/Habilidade/habilidade.css">
+    <link rel="stylesheet" href="/paginas/Habilidade/habilidade.css">
 </head>
 <body>
    <div class="wrapper">
     <header>
         <div class="menu_header">
             <ul class="nav_header">
-                <a href="/Portifolio_InnovaMA/index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
-                <a href="/Portifolio_InnovaMA/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
-                <a href="/Portifolio_InnovaMA/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
+                <a href="index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
+                <a href="/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
+                <a href="/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
             </ul>
         </div>
     </header>
@@ -30,13 +30,13 @@
         </div>
 
         <div class="img_main">
-            <img src="/Portifolio_InnovaMA/img/Group 14.svg" alt="">
+            <img src="/img/Group 14.svg" alt="">
         </div>
     </main>
 
     <footer>
         <div class="logo">
-            <img src="/Portifolio_InnovaMA/img/Logo Alura Include.svg" alt="Alura">
+            <img src="/img/Logo Alura Include.svg" alt="Alura">
             <p>Desenvolvido por Fernando Cantanhede</p>
         </div>
     </footer>
@@ -45,7 +45,7 @@
     
     
   <script src="https://unpkg.com/lucide@latest"></script>
-  <script src="/Portifolio_InnovaMA/paginas/Habilidade/habilidade.js"></script>
+  <script src="/paginas/Habilidade/habilidade.js"></script>
 </body>
 </html>
 
