--- a/paginas/projects/projects.html
+++ b/paginas/projects/projects.html
@@ -11,7 +11,7 @@
         <header>
         <div class="menu_header">
             <ul class="nav_header">
-                <a href="index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
+                <a href="/index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
                 <a href="/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
                 <a href="/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
             </ul>
