--- a/paginas/projects/projects.html
+++ b/paginas/projects/projects.html
@@ -20,7 +20,7 @@
 
     <main class="main_projects">
         <div class="text_main">
-            <h1>Meus <span>Projetos</span></h1>
+            <h1 id="typewriter">Meus <span>Projetos</span></h1>
             <p>Explore meus projetos e veja como transformo ideias em realidade! Clique aqui para conhecer meu portfólio.</p>
         </div>
 
@@ -34,6 +34,10 @@
     <footer>
         <div class="logo">
             <img src="/img/Logo Alura Include.svg" alt="Alura">
+            <div class="icons">
+                <a href="https://www.instagram.com/fecantanhede/"><i class="icon" data-lucide="instagram"></i></a>
+                <a href="https://wa.me/5598999766252"><i class="icon" data-lucide="phone"></i></a>
+            </div>
             <p>Desenvolvido por Fernando Cantanhede</p>
         </div>
     </footer>
