--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <main>
             <div class="text_main">
                 <h1 id="typewriter">
-                    Fernando <span class="cantanhede">Cantanhede</span>
+                    Fernando <span>Cantanhede</span>
                 </h1>
                 <p>Olá! Eu sou <span>Fernando Cantanhede</span>, um desenvolvedor experiente com 4 anos de atuação na área. Sou apaixonado por tecnologia e me dedico a criar soluções inovadoras e eficientes.</p>
 
                 <div class="links">
                     <h2>Acesse minhas redes:</h2>
-                    <a href="https://github.com/fernanndogg" class="github"><i data-lucide="github"></i>GitHub</a>
-                    <a href="https://www.linkedin.com/in/fernando-cantanhede-a75b91276/" class="linkedin"><i data-lucide="linkedin"></i>LinkedIn</a>
+                    <a href="https://github.com/fernanndogg"><i class="icon" data-lucide="github"></i>GitHub</a>
+                    <a href="https://www.linkedin.com/in/fernando-cantanhede-a75b91276/"><i class="icon" data-lucide="linkedin"></i>LinkedIn</a>
                 </div>
             </div>
 
@@ -40,6 +40,10 @@
         <footer>
             <div class="logo">
                 <img src="/img/Logo Alura Include.svg" alt="Alura">
+                <div class="icons">
+                    <a href="https://www.instagram.com/fecantanhede/"><i class="icon" data-lucide="instagram"></i></a>
+                    <a href="https://wa.me/5598999766252"><i class="icon" data-lucide="phone"></i></a>
+                </div>
                 <p>Desenvolvido por Fernando Cantanhede</p>
             </div>
         </footer>
