--- a/paginas/Habilidade/habilidade.html
+++ b/paginas/Habilidade/habilidade.html
@@ -20,7 +20,7 @@
 
     <main>
         <div class="text_main">
-            <h1>Minhas <span>Habilidades</span></h1>
+            <h1 id="typewriter">Minhas <span>Habilidades</span></h1>
             <p>Sou um desenvolvedor web com expertise em front-end e back-end, capaz de criar soluções completas e eficientes. Tenho sólida experiência com React e Next.js, o que me permite construir interfaces dinâmicas e modernas. Utilizo PHP para desenvolvimento do lado do servidor e banco de dados, garantindo robustez e escalabilidade.</p>
             <p>Além disso, aplico Tailwind CSS para estilização, proporcionando layouts responsivos e atrativos. Meu conhecimento abrangente em banco de dados assegura a integração e manipulação eficiente de dados. Estou sempre atualizado com as melhores práticas do setor, pronto para entregar projetos de alta qualidade e superar as expectativas dos clientes.</p>
 
@@ -37,6 +37,10 @@
     <footer>
         <div class="logo">
             <img src="/img/Logo Alura Include.svg" alt="Alura">
+            <div class="icons">
+                <a href="https://www.instagram.com/fecantanhede/"><i class="icon" data-lucide="instagram"></i></a>
+                <a href="https://wa.me/5598999766252"><i class="icon" data-lucide="phone"></i></a>
+            </div>
             <p>Desenvolvido por Fernando Cantanhede</p>
         </div>
     </footer>
