--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="wrapper">
         <header>
             <div class="menu_header">
-                <ul class="nav_header">
+                <button class="hamburger" id="hamburger">
+                    <i class="icon" data-lucide="menu" id="hamburger-icon"></i>
+                </button>
+                <ul class="nav_header" id="nav_header">
                     <a href="index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
                     <a href="/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
                     <a href="/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
@@ -51,5 +54,6 @@
 
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="/paginas/home/index.js"></script>
+    <script src="/paginas/menu.js"></script>
 </body>
 </html>
