--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
                 <h1 id="typewriter">
                     Fernando <span>Cantanhede</span>
                 </h1>
-                <p>Olá! Eu sou <span>Fernando Cantanhede</span>, um desenvolvedor experiente com 4 anos de atuação na área. Sou apaixonado por tecnologia e me dedico a criar soluções inovadoras e eficientes.</p>
+                <p>Olá! Eu sou <span>Fernando Cantanhede</span>, um entusiasta da ciência, tecnologia e inovação, completamente apaixonado pela programação.  Tenho paixão por tecnologia e me dedico a criar soluções inovadoras e eficientes.</p>
+                <p>Sou Desenvolvedor, com mais de 3 anos de experiência. Graduei-me como Técnico em Informática para Internet pelo IFMA e atualmente estou cursando Ciência da Computação na Universidade Federal do Maranhão.</p>
+
+                <div>
+                    <h2 class="titulos_h2">Minhas Conquistas</h2>
+                    <ul class="titulos">
+                        <li>Co-fundador da Conectils: Uma startup que democratiza a acessibilidade comunicacional para pessoas surdas.</li>
+                        <li>Pesquisador e extensionista: Dediquei meu tempo a pesquisas e projetos de extensão que visam melhorar a vida das pessoas.</li>
+                        <li>Reconhecimento acadêmico: Destaquei-me em diversos programas renomados, como semifinalista no Maior Programa de Tecnologia, Inovação e Empreendedorismo para estudantes do Brasil, finalista no Maior Programa de Empreendedorismo Tecnológico Estudantil do Brasil e vencedor do Startup Weekend Youth.</li>
+                        <li>Aprovações em diversos editais: PIBITI FAPEMA, Aceleradora Impulse, Desafio Liga Jovem, Dersafio Prototipe 4.0, Startup in School, Trilhas Inova, Nordeste On SEBRAE 2023.</li>
+                    </ul>
+                </div>
 
                 <div class="links">
                     <h2>Acesse minhas redes:</h2>
