--- a/paginas/projects/projects.html
+++ b/paginas/projects/projects.html
@@ -10,6 +10,9 @@
     <div class="wrapper">
         <header>
         <div class="menu_header">
+            <button class="hamburger" id="hamburger">
+                <i class="icon" data-lucide="menu" id="hamburger-icon"></i>
+            </button>
             <ul class="nav_header">
                 <a href="/index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
                 <a href="/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
@@ -28,6 +31,7 @@
             <a href="https://projeto-next-eight.vercel.app/"><img src="/img/site1.svg" alt=""></a>
             <a href="https://project-web-react-five.vercel.app/"><img src="/img/site2.svg" alt=""></a>
             <a href="https://curso-aprendizado.vercel.app/"><img src="/img/site3.svg" alt=""></a>
+            <a href="https://conectils.com.br/"><img src="/img/site4.svg" alt=""></a>
         </div>
     </main>
 
@@ -47,6 +51,7 @@
     
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="/paginas/projects/projects.js"></script>
+  <script src="/paginas/menu.js"></script>
 </body>
 </html>
 
