--- a/assets/html/habilidade.html
+++ b/assets/html/habilidade.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/paginas/Habilidade/habilidade.css">
+    <link rel="stylesheet" href="/assets/css/habilidade.css">
 </head>
 <body>
-   <div class="wrapper">
-    <header>
-        <div class="menu_header">
-            <button class="hamburger" id="hamburger">
-                <i class="icon" data-lucide="menu" id="hamburger-icon"></i>
-            </button>
-            <ul class="nav_header">
-                <a href="/index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
-                <a href="/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
-                <a href="/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
-            </ul>
-        </div>
-    </header>
+    <div class="wrapper">
+        <header>
+            <div class="menu_header">
+                <button class="hamburger" id="hamburger">
+                    <i class="icon" data-lucide="menu" id="hamburger-icon"></i>
+                </button>
+                <ul class="nav_header" id="nav_header">
+                    <a href="/index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
+                    <a href="/assets/html/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
+                    <a href="/assets/html/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
+                </ul>
+            </div>
+        </header>
 
     <main>
         <div class="text_main">
@@ -33,13 +33,13 @@
         </div>
 
         <div class="img_main">
-            <img src="/img/Group 14.svg" alt="">
+            <img src="/assets/img/Group 14.svg" alt="">
         </div>
     </main>
 
     <footer>
         <div class="logo">
-            <img src="/img/Logo Alura Include.svg" alt="Alura">
+            <img src="/assets/img/Logo Alura Include.svg" alt="Alura">
             <div class="icons">
                 <a href="https://www.instagram.com/fecantanhede/"><i class="icon" data-lucide="instagram"></i></a>
                 <a href="https://wa.me/5598999766252"><i class="icon" data-lucide="phone"></i></a>
@@ -51,9 +51,10 @@
 
     
     
-  <script src="https://unpkg.com/lucide@latest"></script>
-  <script src="/paginas/Habilidade/habilidade.js"></script>
-  <script src="/paginas/menu.js"></script>
+   <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="/assets/js/menu.js"></script>
+    <script src="/assets/js/nav.js"></script>
+    <script src="/assets/js/effect.js"></script>
 </body>
 </html>
 
