--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/paginas/home/index.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
 </head>
 <body>
     <div class="wrapper">
@@ -15,8 +15,8 @@
                 </button>
                 <ul class="nav_header" id="nav_header">
                     <a href="index.html" class="a_header"><i class="icon" data-lucide="home"></i>Sobre mim</a>
-                    <a href="/paginas/Habilidade/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
-                    <a href="/paginas/projects/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
+                    <a href="/assets/html/habilidade.html" class="a_header"><i class="icon" data-lucide="tv-2"></i>Habilidade</a>
+                    <a href="/assets/html/projects.html" class="a_header"><i class="icon" data-lucide="heart"></i>Projetos</a>
                 </ul>
             </div>
         </header>
@@ -47,13 +47,13 @@
             </div>
 
             <div>
-                <img src="/img/banner.svg" alt="">
+                <img src="/assets/img/banner.svg" alt="">
             </div>
         </main>
 
         <footer>
             <div class="logo">
-                <img src="/img/Logo Alura Include.svg" alt="Alura">
+                <img src="/assets/img/Logo Alura Include.svg" alt="Alura">
                 <div class="icons">
                     <a href="https://www.instagram.com/fecantanhede/"><i class="icon" data-lucide="instagram"></i></a>
                     <a href="https://wa.me/5598999766252"><i class="icon" data-lucide="phone"></i></a>
@@ -64,7 +64,8 @@
     </div>
 
     <script src="https://unpkg.com/lucide@latest"></script>
-    <script src="/paginas/home/index.js"></script>
-    <script src="/paginas/menu.js"></script>
+    <script src="/assets/js/menu.js"></script>
+    <script src="/assets/js/nav.js"></script>
+    <script src="/assets/js/effect.js"></script>
 </body>
 </html>
